# lstm-multiple-layer-training

./: .gitignore  README.md  TRAINING-FLOW.md  pyproject.toml  vibe-code-rule.yaml
.ai/: AI-PROJECT-OVERVIEW.md  AI-PYTHON-GUIDE.md
program/app/: main.py
program/config_templates/: config.yaml
program/functions/: print_analyze_metrics.py
program/models/: datasources_config.py  datasources_config_model.py  debug_model.py  ensemble_model.py  lstm_architecture.py  lstm_model.py  lstm_training.py  optimizer_model.py  training_config.py
program/processor/: processor.py
program/processor/executors/dataset_preparation/: csv_dataset_executor.py  main_executor.py
program/processor/executors/model_ensemble/: main_executor.py  stacking_ensemble_executor.py
program/processor/executors/model_exporter/: main_executor.py
program/processor/executors/model_preparation/: main_executor.py
program/processor/executors/model_training/: main_executor.py  model_build_executor.py  model_test_executor.py
program/test_suits/: interfacing_model.py  test_processor.py
program/test_suits/dataset_executors/: csv_dataset_executor.py  main_executor.py
program/test_suits/dataset_preparation/: test_csv_dataset_executor.py  test_main_executor.py
program/test_suits/model_preparation/: main_executor.py  test_main_executor.py
program/test_suits/test_config/: comparison_output.csv  config.yaml  sample-config.yaml
program/test_suits/test_config/sample-dataset/: db_depletion_mock.py  disk_sim_5min.csv
program/test_suits/test_config/test-sample-dataset/: db_depletion_test_mock.py  (+1 more)
